--- a/debian/sslocal.1
+++ b/debian/sslocal.1
@@ -51,9 +51,11 @@ Verbose mode.
 .B \-q, \-qq
 Quiet mode, only show warnings/errors.
 .SH SEE ALSO
-.br
-The programs are documented fully by
+.PP
+The programs are documented by
 .IR "Shell Xu <shell909090@gmail.com>"
 and 
-.IR "Clowwindy <clowwindy42@gmail.com>",
-available via the Info system.
+.IR "Clowwindy <clowwindy42@gmail.com>".
+.PP
+More documentation can be found at
+https://github.com/shadowsocks/shadowsocks/wiki\.
